# truncheon

./: .gitignore  COMMANDS.md  Cargo.toml  Justfile  LOG.md  README.md  flake.nix  flake.old
.cargo/: config.toml
.github/workflows/: taghunt.yml
assets/region/: example_region_sketch.yml  test_region.yml
src/: hex.rs  lib.rs  main.rs  timeline.rs  ui.rs
src/hex/: cardinal.rs  mod.rs
src/hex/coord/: cubic.rs  index.rs  mod.rs  offset.rs
src/hex/coord/axial/: mod.rs  point.rs  vector.rs
src/hex/coord/pixel/: point.rs  vector.rs
src/hex/field/: mod.rs
src/region/: mod.rs
src/ui/: mod.rs  tui.rs
src/ui/app/: mod.rs
src/ui/app/snapshots/: truncheon__ui__app__tests__renders_as_expected.snap  truncheon__ui__app__tests__renders_as_expected.snap.new
src/ui/widgets/: canvas_placeholder.rs  hexmap.rs  io.rs  mod.rs  placeholder.rs  svg.rs
src/ui/widgets/snapshots/: truncheon__ui__widgets__canvas_placeholder__tests__rendering__renders_as_expected_stateful.snap  truncheon__ui__widgets__svg__tests__renders_example.snap  truncheon__ui__widgets__svg__tests__renders_example.snap.new
src/ui/widgets/svg/: mod.rs  options.rs  svg.rs  svg_template.rs  svg_widget.rs
src/ui/widgets/svg/snapshots/: truncheon__ui__widgets__svg__svg__tests__renders_example.snap  truncheon__ui__widgets__svg__svg_widget__tests__renders_example.snap
src/util/: image_cache.rs  image_renderer.rs  mod.rs  options.rs  svg_template.rs
