[package]
name = "truncheon"
version = "0.1.0"
edition = "2024"
license = "AGPL v3"

[lib]
name="truncheon"
bench = false
path="src/lib.rs"

[[bin]]
name="truncheon"
path="src/main.rs"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
nom = "7.1.3"
rand = "0.9.0"
ratatui = "0.29.0"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.44.0", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tui-logger = { version = "0.17.0", features = ["tracing-support"] }

[dev-dependencies]
mutants = "0.0.3"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
insta = "1.42.2"
similar-asserts = "1.7.0"
tracing-test = "0.2.5"
rstest = "*"


[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false

[profile.release]
opt-level = 3
debug = true

[profile.mutants]
inherits = "test"
debug = false
debug-assertions = false
opt-level = 3

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
