[package]
name = "truncheon"
version = "0.1.0"
edition = "2024"
license = "AGPL v3"

[lib]
name="truncheon"
bench = false
path="src/lib.rs"

[[bin]]
name="truncheon"
path="src/main.rs"

[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_02 = { version = "0.2", features = ["js"], package = "getrandom" }
wasm-bindgen = "0.2"

[dependencies]
# anyhow = "1.0.99"
bevy_ratatui_camera = "0.16.0"
# bevy_ratatui_camera = { git = "https://github.com/jfredett/bevy_ratatui_camera.git" }
# clap = { version = "4.5.42", features = ["derive"] }
# dyn_serde = "1.1.2"
# erased-serde = "0.4.6"
# nom = "8.0.0"
# rand = "0.9.0"
# resvg = "0.45.1"
# serde = { version = "1.0.203", features = ["derive"] }
# state_machine = "0.1.14"
# tera = "1.20.0"
# tracing-appender = "0.2"
# typetag = "0.2.20"
bevy_ratatui = "0.10.0"
# console-subscriber = "0.4.1"
# crossterm = { version = "*", features = ["event-stream"] }
derive-quickcheck-arbitrary = "0.1.3"
# To match the flake-available version
dioxus = "=0.7.1"
image = "0.25.6"
lazy_static = "1.5.0"
ratatui = "0.29.0"
ratatui-image = "8.0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tui-logger = { version = "0.17.0", features = ["tracing-support"] }
bevy_mod_debugdump = "0.14.0"
num = "0.4.3"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
mutants = "0.0.3"
insta = "1.42.2"
similar-asserts = "1.7.0"
tracing-test = "0.2.5"
rstest = "*"

[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false

[profile.release]
opt-level = 3
debug = true

[profile.mutants]
inherits = "test"
debug = false
debug-assertions = false
opt-level = 3

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3


[dependencies.bevy]
version = "0.17"
default-features = false
features = [
    # Defaults
    # "animation",                   # Enable animation for everything that supports it
    # "bevy_asset",                  # Asset management
    # "bevy_audio",                  # Audio support
    # "bevy_color",                  # Color management
    # "bevy_core_pipeline",          # Bevy's GPU rendering architecture
    # "bevy_gilrs",                  # Gamepad/controller support
    # "bevy_gizmos",                 # Gizmos (drawing debug lines and shapes)
    # "bevy_image",                  # Image support
    # "bevy_input_focus",            # Input focusing system for UI
    # "bevy_log",                    # Logging to console
    # "bevy_mesh_picking_backend",   # 3D mesh picking (selection by cursor)
    # "bevy_pbr",                    # 3D rendering and Physically Based Shading
    # "bevy_picking",                # Picking (selection of objects by cursor)
    # "bevy_render",                 # GPU support (based on `wgpu`)
    # "bevy_scene",                  # ECS Scenes
    # "bevy_sprite",                 # 2D rendering (sprites, meshes, text)
    # "bevy_sprite_picking_backend", # 2D sprite picking (selection by cursor)
    # "bevy_state",                  # App state management
    # "bevy_text",                   # Text rendering
    # "bevy_ui",                     # UI toolkit
    # "bevy_ui_picking_backend",     # UI node picking (selection by cursor)
    # "bevy_window",                 # Window management
    # "bevy_winit",                  # Cross-platform window management support

    # Low-level tunables
    # "std",            # Use the Rust standard library (important!)
    # "async_executor", # Enable the Async Executor (Bevy task pools)
    # "multi_threaded", # Enable CPU multithreading
    # "sysinfo_plugin", # Support CPU and RAM usage diagnostics
    # "custom_cursor",  # Support custom cursors

    # Platform-Specific
    # "x11",                   # Linux: Support X11 windowing system
    # "android_shared_stdcxx", # Android: use shared C++ library
    # "android-game-activity", # Android: use GameActivity instead of NativeActivity
    # "webgl2",                # Web: use WebGL2 instead of WebGPU

    # Built-in Data
    # "default_font",       # Built-in default font for UI (Fira Mono)
    # "smaa_luts",          # Support SMAA antialiasing
    # "tonemapping_luts",   # Support different camera Tonemapping modes (enables KTX2+zstd)

    # Asset File Format Support
    # "bevy_gltf", # GLTF 3D asset support
    # "png",       # PNG image format for simple 2D images
    # "hdr",       # HDR image format
    # "ktx2",      # KTX2 format for GPU texture data
    # "zstd",      # ZSTD compression support in KTX2 files
    # "vorbis",    # Audio: OGG Vorbis


    # These are other (non-default) features that may be of interest:
    # (add any of these that you need)

    # General Bevy features
    # "ghost_nodes", # UI ghost nodes

    # Low level tunables
    # "async-io",             # Use `async-io` instead of `futures-lite`
    # "serialize",            # Support for `serde` Serialize/Deserialize
    # "subpixel_glyph_atlas", # Subpixel antialiasing for text/fonts
    # "reflect_documentation", # Documentation reflection support
    # "reflect_functions",    # Function reflection support

    # Platform-Specific
    # "wayland",                  # Linux: Support Wayland windowing system
    # "accesskit_unix",           # UNIX-like: AccessKit Accessibility Framework support
    # "android-native-activity",  # Android: Use NativeActivity instead of GameActivity
    # "spirv_shader_passthrough", # Vulkan: allow direct loading of SPIR-V shader blobs without validation
    # "webgpu",                   # Web: use the faster, modern, experimental WebGPU API instead of WebGL2
    # "statically-linked-dxc",    # Windows: embed the DirectX Shader Compiler into your game binary
    # "web",                      # Web platform integration
    # "libm",                     # Use libm for math on non-std / embedded platforms
    # "critical-section",         # For supporting no-std / embedded
    # "default_no_std",

    # Graphics/rendering features (may cause issues on old/weak GPUs)
    # "experimental_pbr_pcss", # PCSS shadow filtering
    # "meshlet",               # Meshlet / virtual geometry rendering (like Unreal's Nanite)
    # "pbr_anisotropy_texture", # Support Anisotropy Map texture
    # "pbr_multi_layer_material_textures", # Support multi-layer textures
    # "pbr_specular_textures",  # Support specular map textures
    # "pbr_transmission_textures", # Support textures for light transimssion (translucency)

    # # Development features
    # "dynamic_linking",     # Dynamic linking for faster compile-times
    # "asset_processor",     # Enable asset processing support
    # "bevy_debug_stepping", # Enable stepping through ECS systems for debugging
    # "bevy_dev_tools",      # Extra dev functionality (like FPS overlay)
    # "bevy_remote",         # Enable BRP (Bevy Remote Protocol) for integration with editors and external dev tools
    # "file_watcher",        # Asset hot-reloading
    # "meshlet_processor",   # Asset processor to convert meshes into meshlet format
    # "glam_assert",         # Math validation / debug assertions
    # "debug_glam_assert",   # Math validation / debug assertions
    # "bevy_ui_debug",       # UI debugging functionality
    # "bevy_ci_testing",     # For testing of Bevy itself in CI
    # "embedded_watcher",    # Hot-reloading for Bevy's internal/builtin assets
    # "configurable_error_handler",
    # "trace",               # Enable tracing
    # "trace_chrome",        # Enable tracing using the Chrome backend
    # "trace_tracy",         # Enable tracing using Tracy
    # "trace_tracy_memory",  # Enable memory tracking for Tracy
    # "track_location",      # Enable location tracking
    # "detailed_trace",      # Extra verbose tracing

    # # Asset File Format Support
    # "basis-universal", # Basis Universal GPU texture compression format
    # "bmp",  # Uncompressed BMP image format
    # "dds",  # DDS (DirectX) format for GPU textures, alternative to KTX2
    # "exr",  # OpenEXR advanced image format
    # "ff",   # FF image support
    # "flac", # Audio: FLAC lossless format
    # "gif",  # GIF legacy image format
    # "ico",  # ICO image format (Windows icons)
    # "jpeg", # JPEG lossy format for photos
    # "mp3",  # Audio: MP3 format (not recommended)
    # "minimp3", # Alternative MP3 decoder
    # "pnm",  # PNM (pam, pbm, pgm, ppm) image format
    # "qoi",  # QOI image format
    # "shader_format_glsl",  # GLSL shader support
    # "shader_format_spirv", # SPIR-V shader support
    # "shader_format_wesl",  # WESL (Extended WGSL) shader support
    # "tga",  # Truevision Targa image format
    # "tiff", # TIFF image format
    # "wav",  # Audio: Uncompressed WAV
    "webp", # WebP image format
    # "zlib", # zlib compression support in KTX2 files
    # "symphonia-aac", # AAC audio format (via Symphonia library)
    # "symphonia-flac", # Alternative FLAC audio decoder (via Symphonia library)
    # "symphonia-isomp4", # MP4 format (via Symphonia library)
    # "symphonia-vorbis", # Alternative Ogg Vorbis audio support (via Symphonia library)
    # "symphonia-wav", # Alternative WAV audio support (via Symphonia library)
    # "symphonia-all", # All Audio formats supported by the Symphonia library
]

